--- a/WFC3 IR reduction.ipynb
+++ b/WFC3 IR reduction.ipynb
@@ -77,7 +77,7 @@
     "object_name = 'DESJ2038-4008'\n",
     "band = 'F160W'\n",
     "\n",
-    "raw_data_dir = '../raw_data/F160W'\n",
+    "raw_data_dir = '../raw_data/' + band\n",
     "output_data_dir = '../reduced_data'"
    ]
   },
@@ -88,7 +88,7 @@
    "outputs": [],
    "source": [
     "# create temp working directory in output_dir\n",
-    "temp_dir = output_data_dir+'/temp'\n",
+    "temp_dir = output_data_dir + '/temp'\n",
     "\n",
     "if os.path.isdir(temp_dir):\n",
     "    shutil.rmtree(temp_dir)\n",
@@ -96,7 +96,7 @@
     "os.mkdir(temp_dir)\n",
     "\n",
     "# move raw data files to temporary directory to work on\n",
-    "for file in glob.glob(os.path.join(raw_data_dir,\"*.fits\")):\n",
+    "for file in glob.glob(os.path.join(raw_data_dir, \"*.fits\")):\n",
     "        shutil.copy2(file, temp_dir)"
    ]
   },
@@ -145,7 +145,7 @@
    "source": [
     "flt_files = glob.glob(temp_dir+'/*flt.fits')\n",
     "\n",
-    "plate_scale = fits.getval(flt_files[0], 'idcscale',ext=1)\n",
+    "plate_scale = fits.getval(flt_files[0], 'idcscale', ext=1)\n",
     "print('Plate scale: {:>6.4f}'.format(plate_scale))\n",
     "postarg1 = np.empty(len(flt_files), dtype=np.float)\n",
     "postarg2 = np.empty(len(flt_files), dtype=np.float)\n",
@@ -580,7 +580,7 @@
     }
    ],
    "source": [
-    "output = output_data_dir+'/'+object_name+'_'+band\n",
+    "output = output_data_dir + '/' + object_name + '_' + band\n",
     "\n",
     "astrodrizzle.AstroDrizzle(temp_dir+'/*flt.fits',\n",
     "                          \n",
@@ -682,8 +682,8 @@
    "source": [
     "%matplotlib inline\n",
     "\n",
-    "sci_file = output+'_drz_sci.fits'\n",
-    "wht_file = output+'_drz_wht.fits'\n",
+    "sci_file = output + '_drz_sci.fits'\n",
+    "wht_file = output + '_drz_wht.fits'\n",
     "\n",
     "with fits.open(sci_file) as hdu:\n",
     "    im_wcs = wcs.WCS(hdu[0].header)\n",
@@ -695,7 +695,7 @@
     "radec_lims = wcs.utils.pixel_to_skycoord([865, 965], [795, 895], im_wcs)\n",
     "        \n",
     "norm = ImageNormalize(sci, vmin=-0.2, vmax=25, stretch=LogStretch())\n",
-    "fig, ax = plt.subplots(1, 2, figsize=(16, 8), subplot_kw={'projection':im_wcs})\n",
+    "fig, ax = plt.subplots(1, 2, figsize=(16, 8), subplot_kw={'projection': im_wcs})\n",
     "ax[0].imshow(sci, norm=norm, cmap='viridis', origin='lower')\n",
     "ax[1].imshow(wht, cmap='plasma', origin='lower')\n",
     "\n",
