--- a/Download data.ipynb
+++ b/Download data.ipynb
@@ -50,22 +50,28 @@
    },
    "outputs": [],
    "source": [
-    "download_dir = '../raw_data/F160W/'\n",
+    "download_dir = \"../raw_data/F160W/\"\n",
     "\n",
-    "obs_table = Observations.query_criteria(proposal_id='15320', target_name='DESJ2038-4008', \n",
-    "                                        filters='F160W', obstype='all')\n",
+    "obs_table = Observations.query_criteria(\n",
+    "    proposal_id=\"15320\", target_name=\"DESJ2038-4008\", filters=\"F160W\", obstype=\"all\"\n",
+    ")\n",
     "\n",
-    "download_tab = Observations.download_products(obs_table['obsid'], mrp_only=False, \n",
-    "                                              download_dir=download_dir,\n",
-    "                                              productSubGroupDescription=['FLT'])\n",
+    "download_tab = Observations.download_products(\n",
+    "    obs_table[\"obsid\"],\n",
+    "    mrp_only=False,\n",
+    "    download_dir=download_dir,\n",
+    "    productSubGroupDescription=[\"FLT\"],\n",
+    ")\n",
     "\n",
-    "science_files = glob.glob(os.path.join(os.curdir, download_dir, 'mastDownload', 'HST', '*', '*fits'))\n",
+    "science_files = glob.glob(\n",
+    "    os.path.join(os.curdir, download_dir, \"mastDownload\", \"HST\", \"*\", \"*fits\")\n",
+    ")\n",
     "\n",
     "for im in science_files:\n",
-    "    root = im.split('/')[-1]\n",
+    "    root = im.split(\"/\")[-1]\n",
     "    os.rename(im, download_dir + root)\n",
-    "    \n",
-    "shutil.rmtree(download_dir + 'mastDownload')"
+    "\n",
+    "shutil.rmtree(download_dir + \"mastDownload\")"
    ]
   },
   {
@@ -98,21 +104,27 @@
     }
    ],
    "source": [
-    "download_dir = '../raw_data/F814W/'\n",
+    "download_dir = \"../raw_data/F814W/\"\n",
     "\n",
-    "obs_table = Observations.query_criteria(proposal_id='15320', target_name='DESJ2038-4008', \n",
-    "                                        filters='F814W', obstype='all')\n",
+    "obs_table = Observations.query_criteria(\n",
+    "    proposal_id=\"15320\", target_name=\"DESJ2038-4008\", filters=\"F814W\", obstype=\"all\"\n",
+    ")\n",
     "\n",
-    "download_tab = Observations.download_products(obs_table['obsid'], mrp_only=False, \n",
-    "                                              download_dir=download_dir,\n",
-    "                                              productSubGroupDescription=['FLC', 'FLT'])\n",
+    "download_tab = Observations.download_products(\n",
+    "    obs_table[\"obsid\"],\n",
+    "    mrp_only=False,\n",
+    "    download_dir=download_dir,\n",
+    "    productSubGroupDescription=[\"FLC\", \"FLT\"],\n",
+    ")\n",
     "\n",
-    "science_files = glob.glob(os.path.join(os.curdir, download_dir, 'mastDownload', 'HST', '*', '*fits'))\n",
+    "science_files = glob.glob(\n",
+    "    os.path.join(os.curdir, download_dir, \"mastDownload\", \"HST\", \"*\", \"*fits\")\n",
+    ")\n",
     "\n",
     "for im in science_files:\n",
     "    shutil.copy2(im, download_dir)\n",
-    "    \n",
-    "shutil.rmtree(download_dir + 'mastDownload')"
+    "\n",
+    "shutil.rmtree(download_dir + \"mastDownload\")"
    ]
   },
   {
@@ -136,22 +148,28 @@
     }
    ],
    "source": [
-    "download_dir = '../raw_data/F475X/'\n",
+    "download_dir = \"../raw_data/F475X/\"\n",
     "\n",
-    "obs_table = Observations.query_criteria(proposal_id='15320', target_name='DESJ2038-4008', \n",
-    "                                        filters='F475X', obstype='all')\n",
+    "obs_table = Observations.query_criteria(\n",
+    "    proposal_id=\"15320\", target_name=\"DESJ2038-4008\", filters=\"F475X\", obstype=\"all\"\n",
+    ")\n",
     "\n",
-    "download_tab = Observations.download_products(obs_table['obsid'], mrp_only=False, \n",
-    "                                              download_dir=download_dir,\n",
-    "                                              productSubGroupDescription=['FLC', 'FLT'])\n",
+    "download_tab = Observations.download_products(\n",
+    "    obs_table[\"obsid\"],\n",
+    "    mrp_only=False,\n",
+    "    download_dir=download_dir,\n",
+    "    productSubGroupDescription=[\"FLC\", \"FLT\"],\n",
+    ")\n",
     "\n",
-    "science_files = glob.glob(os.path.join(os.curdir, download_dir, 'mastDownload', 'HST', '*', '*fits'))\n",
+    "science_files = glob.glob(\n",
+    "    os.path.join(os.curdir, download_dir, \"mastDownload\", \"HST\", \"*\", \"*fits\")\n",
+    ")\n",
     "\n",
     "for im in science_files:\n",
-    "    root = im.split('/')[-1]\n",
+    "    root = im.split(\"/\")[-1]\n",
     "    os.rename(im, download_dir + root)\n",
-    "    \n",
-    "shutil.rmtree(download_dir + 'mastDownload')"
+    "\n",
+    "shutil.rmtree(download_dir + \"mastDownload\")"
    ]
   }
  ],
@@ -171,7 +189,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
